@@ -1,4 +1,5 @@
 0.2.1:
+  - use_ruby_names now defaults to true.
 
 0.2.0:
   - Now using httpi instead of net/http.
